Fixed 'Winner' overlay page buttons to they align centered.

--- a/public/css/game.css
+++ b/public/css/game.css
@@ -73,7 +73,8 @@
 }
 
 #overlay-content > button {
-  margin: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 #drawcard-btn {
